Fixed printing issues
- announcement: fixed table overflowing the right column
- fixed h1 not displaying in document pretty print view
- fixed contributors side overlapping footer

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -452,7 +452,8 @@ table {
   .results,
   .about,
   .search,
-  .lawcite {
+  .lawcite,
+  .contributors {
     -webkit-print-color-adjust: exact;
     print-color-adjust: exact;
 
@@ -461,6 +462,13 @@ table {
       margin-left: 1em;
       margin-top: 2.4em;
       width: 23.2318%;
+    }
+
+    table {
+      max-width: 560px !important; 
+      
+      colgoup col{ width: auto; }
+      td { border-bottom: none; }
     }
 
     #page-main {
@@ -476,6 +484,10 @@ table {
         }
 
         ul { overflow: hidden; }
+      }
+
+      .the-document {
+        h1 { display: block; }
       }
     }
 
@@ -503,7 +515,7 @@ table {
 
       &.card-checkboxes .checkbox { margin-left: 0 !important; }
 
-      &.card-checkboxes a { padding: .5em 1em .5em .5em; }
+      &.card-checkboxes a { padding: .5em 1em .5em .5em !important; }
 
     }
 
@@ -571,7 +583,7 @@ table {
 
       .side-tools,
       .side-statistics {
-        display: none;
+        display: none !important;
       }
 
       .side-element svg {
